[gd_scene load_steps=4 format=3 uid="uid://crlyjyjlpbnw0"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_chr4d"]
[ext_resource type="PackedScene" uid="uid://ce14rgv2ig27p" path="res://scenes/options.tscn" id="2_yl6p7"]
[ext_resource type="PackedScene" uid="uid://c3mpiklbq0shb" path="res://scenes/basic_world.tscn" id="3_2u5mp"]

[node name="Node" type="Node"]
script = ExtResource("1_chr4d")

[node name="Main_Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Main_Menu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Main_Menu/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 880.5
offset_top = 469.5
offset_right = 999.5
offset_bottom = 570.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(59.5, 54.5)

[node name="Host" type="Button" parent="Main_Menu/Panel/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Exit")
text = "Host test map"

[node name="HBoxContainer" type="HBoxContainer" parent="Main_Menu/Panel/VBoxContainer"]
layout_mode = 2

[node name="ip" type="LineEdit" parent="Main_Menu/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "127.0.0.1"
alignment = 1
virtual_keyboard_type = 2

[node name="port" type="LineEdit" parent="Main_Menu/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "21370"
placeholder_text = "21370"
alignment = 2

[node name="Join" type="Button" parent="Main_Menu/Panel/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Settings" type="Button" parent="Main_Menu/Panel/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Options"

[node name="Gamerules" type="Button" parent="Main_Menu/Panel/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Gamerules"

[node name="Exit" type="Button" parent="Main_Menu/Panel/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Host")
text = "Exit"

[node name="Label" type="Label" parent="Main_Menu/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 900.0
offset_top = 308.0
offset_right = 978.125
offset_bottom = 331.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
pivot_offset = Vector2(39, 7.5)
text = "Glaciation"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" parent="Main_Menu" instance=ExtResource("2_yl6p7")]
visible = false
layout_mode = 1

[node name="BasicWorld" parent="." instance=ExtResource("3_2u5mp")]

[node name="MultiplayerSpawner2" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/FPScontroller/FPScontroller.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="Main_Menu/Panel/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Main_Menu/Panel/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="toggled" from="Main_Menu/Panel/VBoxContainer/Settings" to="." method="_on_settings_toggled"]
[connection signal="toggled" from="Main_Menu/Panel/VBoxContainer/Gamerules" to="." method="_on_gamerules_toggled"]
[connection signal="pressed" from="Main_Menu/Panel/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
